<resources>
    <string name="app_name">Gold Cinema</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="bsign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="book">Book</string>
    <string name="log_in">LOG IN</string>
    <string name="payment_options">Payment Options</string>
    <string name="movie_list">Movie List</string>
    <string name="dshow">Select Date And Showtime</string>
    <string name="date">Date:</string>
    <string name="showtime">Showtime:</string>
    <string name="food">Order Food</string>
    <string name="ind">INFORMATION AND DESCRIPTION</string>
    <string name="dir">Director:</string>
    <string name="c">Cast:</string>
    <string name="p">Producer:</string>
    <string name="desc">Description:</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="sign_up_error_title">Sign Up Error</string>
    <string name="seats_selected">Seats Selected: </string>
    <string name="rupees">Rupees</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_username">Enter Username</string>
</resources>
