<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mimg"
        android:layout_width="match_parent"
        android:layout_height="250dp" />
    <TextView
        android:id="@+id/mn"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dir"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/activity_vertical_margin" />
        <TextView
            android:id="@+id/director"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/activity_vertical_margin" />
        <TextView
            android:id="@+id/cast"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin" />
        <TextView
            android:id="@+id/producer"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:text="@string/desc"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge" />
        <TextView
            android:id="@+id/desc"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>
