<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.precisa.goldcinema.SeatSelectionActivity">

    <View
        android:id="@+id/busDeckSelectionMargin"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ffdddd" />

    <LinearLayout
        android:id="@+id/seatSelectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/busDeckSelectionMargin" >

        <LinearLayout
            android:id="@+id/seatsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seatsSelectedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seats_selected"
                android:textColor="#000000"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/seatsSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Total Price:"
                android:textColor="#000000"
                android:textSize="20.0sp" />

            <TextView
                android:id="@+id/tprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="20.0sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/price"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20.0sp"
            android:textColor="#000000"
            android:text="Seat Prices:"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip">
            <TextView
                android:id="@+id/gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seat 1 - 20 :- Price: Rs.80"/>
            <TextView
                android:id="@+id/platinum"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seat 21 - 40 :- Price: Rs.100"/>
        </LinearLayout>
        <TextView
            android:id="@+id/silver"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seat 41 - 50 :- Price: Rs.150"/>
    </LinearLayout>

    <View
        android:id="@+id/seatSelectionHeaderMargin"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@+id/seatSelectionHeader"
        android:background="#ffdddddd" />

    <RelativeLayout
        android:id="@+id/seatLayoutScroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seatSelectionHeaderMargin" >

        <RelativeLayout
            android:id="@+id/scrollableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/seatLegendLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="5.0dip" >

                <RelativeLayout
                    android:id="@+id/availableImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true" >

                    <ImageView
                        android:id="@+id/availableImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10.0dip"
                        android:rotation="90.0"
                        android:src="@drawable/seat_layout_tab_nor_avl" />

                    <TextView
                        android:id="@+id/availableText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_toRightOf="@+id/availableImage"
                        android:text="@string/available"
                        android:textSize="12.0sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bookedImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/availableImageLayout" >

                    <ImageView
                        android:id="@+id/bookedImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:rotation="90.0"
                        android:src="@drawable/seat_layout_tab_nor_bkd" />

                    <TextView
                        android:id="@+id/bookedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_toRightOf="@+id/bookedImage"
                        android:text="@string/booked"
                        android:textSize="12.0sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/selectedImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/bookedImageLayout" >

                    <ImageView
                        android:id="@+id/selectedImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10.0dip"
                        android:rotation="90.0"
                        android:src="@drawable/seat_layout_tab_nor_std" />

                    <TextView
                        android:id="@+id/selectedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_toRightOf="@+id/selectedImage"
                        android:text="@string/selected"
                        android:textSize="12.0sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/ladiesImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/availableImageLayout"
                    android:layout_marginTop="5.0dip" >
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/seatLayoutLowerMain"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_below="@+id/seatLegendLayout"
                android:layout_centerHorizontal="true"
                android:paddingBottom="5.0dp"
                android:paddingRight="5.0dp"
                android:orientation="vertical" >

                <GridView
                    android:id="@+id/gridView1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:columnWidth="100dp"
                    android:gravity="center"
                    android:numColumns="4"
                    android:stretchMode="columnWidth" >
                </GridView>

                <Button
                    android:id="@+id/order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>